@@ -40,6 +40,9 @@ Version 1.4.11 - SVN
     the URI of the "right" frame; plugins have to change the value of the
     global variable $right_frame_url
   - Fix issue in darkness theme with extra closing bracket.
+  - No longer store all message composition sessions in the PHP session,
+    since it was not made use of and in rare cases, made sessions too big
+  - Composition restoration functionality now correctly restores attachments
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
